--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Title of the document</title>
-		<script src=https://threejs.org/build/three.js></script>
-		<script src=dat.gui.js></script>
+		<meta charset="utf-8">
+		<title>Cluedo</title>
 
 		<style media="screen">
 			canvas {
@@ -11,13 +10,14 @@
 			}
 		</style>
 
-		<script src="webcomponentsjs/webcomponents-lite.js"></script>
+		<script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+		<script src=https://threejs.org/build/three.js></script>
+		<script src=dat.gui.js></script>
+
 		<link rel="import" href="elements.html">
 	</head>
 
 	<body>
-		<canvas width="800" height="800"></canvas>
-		<script src=scene.js></script>
-		<script src=character.js></script>
+		<adebray-cluedo></adebray-cluedo>
 	</body>
 </html>
