--- a/client/elements.html
+++ b/client/elements.html
@@ -1,1 +1,18 @@
-<link rel=import href=../bower_components/
+<link rel=import href=bower_components/polymer/polymer.html>
+
+<!-- <link rel=import href=bower_components/iron-elements/iron-elements.html>
+<link rel=import href=bower_components/paper-elements/paper-elements.html> -->
+
+<!-- <link rel=import href=bower_components/iron-input/iron-input.html>
+<link rel=import href=bower_components/iron-a11y-keys-behavior/iron-a11y-keys-behavior.html>
+<link rel=import href=bower_components/iron-autogrow-textarea/iron-autogrow-textarea.html>
+<link rel=import href=bower_components/paper-styles/paper-styles-classes.html>
+<link rel=import href=bower_components/iron-behaviors/index.html>
+<link rel=import href=bower_components/iron-form-element-behavior/iron-form-element-behavior.h -->
+
+<link rel=import href=bower_components/iron-ajax/iron-ajax.html>
+<link rel="import" href="bower_components/prism-element/prism-highlighter.html">
+<link rel=import href=bower_components/marked-element/marked-element.html>
+<link rel=import href=bower_components/paper-input/all-imports.html>
+
+<link rel=import href=adebray-cluedo.html>
