--- a/client/index.html
+++ b/client/index.html
@@ -10,11 +10,18 @@
 			}
 		</style>
 
+		<link rel="import" href="bower_components/iron-flex-layout/iron-flex-layout-classes.html">
+		<style is="custom-style" include="iron-flex iron-flex-alignment"></style>
+
 		<script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 		<script src=https://threejs.org/build/three.js></script>
 		<script src=dat.gui.js></script>
 
+		<script src=scene.js></script>
+		<script src=character.js></script>
+
 		<link rel="import" href="elements.html">
+
 	</head>
 
 	<body>
