--- a/client/elements.html
+++ b/client/elements.html
@@ -14,5 +14,8 @@
 <link rel="import" href="bower_components/prism-element/prism-highlighter.html">
 <link rel=import href=bower_components/marked-element/marked-element.html>
 <link rel=import href=bower_components/paper-input/all-imports.html>
+<link rel=import href=bower_components/paper-button/paper-button.html>
+<link rel=import href=bower_components/paper-dialog/paper-dialog.html>
 
 <link rel=import href=adebray-cluedo.html>
+<link rel=import href=adebray-dialog.html>
