--- a/client/elements/adebray-cluedo.html
+++ b/client/elements/adebray-cluedo.html
@@ -26,11 +26,11 @@
 			attached: function () {
 				let {character: mainCharacter} = Character({
 					name: "hero",
-					texture: "./redheadphones.png"
+					texture: "./assets/redheadphones.png"
 				})
 				let {character: pnjCharacter} = Character({
 					name: "pnj",
-					texture: "./3djesus.png"
+					texture: "./assets/3djesus.png"
 				})
 
 				let {scene, camera, update_stack} = Scene(this.$.scene)
