--- a/client/elements/adebray-dialog.html
+++ b/client/elements/adebray-dialog.html
@@ -14,7 +14,7 @@
 		id="XHR"
 		method="POST"
 		content-type="application/json"
-		url="http://api.adebray.ovh/test"
+		url="http://api.adebray.ovh/recast"
 		handle-as="json"
 		on-response="handleResponse">
 	</iron-ajax>
