--- a/client/index.html
+++ b/client/index.html
@@ -15,10 +15,10 @@
 
 		<script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 		<script src=https://threejs.org/build/three.js></script>
-		<script src=dat.gui.js></script>
 
-		<script src=scene.js></script>
-		<script src=character.js></script>
+		<script src=scripts/dat.gui.js></script>
+		<script src=scripts/scene.js></script>
+		<script src=scripts/character.js></script>
 
 		<link rel="import" href="elements.html">
 
