--- a/client/elements.html
+++ b/client/elements.html
@@ -17,5 +17,5 @@
 <link rel=import href=bower_components/paper-button/paper-button.html>
 <link rel=import href=bower_components/paper-dialog/paper-dialog.html>
 
-<link rel=import href=adebray-cluedo.html>
-<link rel=import href=adebray-dialog.html>
+<link rel=import href=elements/adebray-cluedo.html>
+<link rel=import href=elements/adebray-dialog.html>
