--- a/client/elements.html
+++ b/client/elements.html
@@ -10,12 +10,17 @@
 <link rel=import href=bower_components/iron-behaviors/index.html>
 <link rel=import href=bower_components/iron-form-element-behavior/iron-form-element-behavior.h -->
 
+<link rel=import href=bower_components/app-route/app-location.html>
+<link rel=import href=bower_components/app-route/app-route.html>
+<link rel=import href=bower_components/app-layout/app-layout.html>
 <link rel=import href=bower_components/iron-ajax/iron-ajax.html>
-<link rel="import" href="bower_components/prism-element/prism-highlighter.html">
+<link rel=import href=bower_components/iron-pages/iron-pages.html>
+<link rel=import href=bower_components/prism-element/prism-highlighter.html>
 <link rel=import href=bower_components/marked-element/marked-element.html>
 <link rel=import href=bower_components/paper-input/all-imports.html>
 <link rel=import href=bower_components/paper-button/paper-button.html>
 <link rel=import href=bower_components/paper-dialog/paper-dialog.html>
+<link rel=import href=bower_components/paper-item/paper-item.html>
 
 <link rel=import href=elements/adebray-cluedo.html>
 <link rel=import href=elements/adebray-dialog.html>
