html stuff, spotlight + character init

--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,7 @@
 		<script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 		<link rel="import" href="elements.html">
 
+		<script src="scripts/jsplumb.js "></script>
 		<script src=https://threejs.org/build/three.js></script>
 		<script src=scripts/dat.gui.js></script>
 		<script src=scripts/scene.js></script>
@@ -27,7 +28,7 @@
 	<body>
 		<adebray-cluedo></adebray-cluedo>
 		<script type="text/javascript">
-			location = '#scene'
+			location = '#data'
 		</script>
 	</body>
 </html>
