--- a/client/elements/adebray-cluedo.html
+++ b/client/elements/adebray-cluedo.html
@@ -17,31 +17,6 @@
 
 		</style>
 
-		<prism-highlighter></prism-highlighter>
-		<app-drawer id="drawer" swipe-open>
-			<paper-button raised on-tap="changeLocation">Scene</paper-button>
-			<paper-button raised on-tap="changeLocation">Data</paper-button>
-		</app-drawer>
-
-		<app-location route="{{route}}" use-hash-as-path></app-location>
-		<app-route
-		    route="{{route}}"
-		    pattern="/:page"
-		    data="{{data}}"
-		    tail="{{tail}}">
-		</app-route>
-
-		<iron-pages selected="{{route.path}}" attr-for-selected="id">
-		<section id=scene>
-			<adebray-dialog id="dialog"></adebray-dialog>
-			<canvas id=canvas width="800" height="800"></canvas>
-		</section>
-		<section id=data>
-			<marked-element markdown={{_toJSON(data)}}></marked-element>
-		</section>
-		<section></section>
-		</iron-pages>
-
 		<iron-ajax
 		  auto
 		  url="http://api.adebray.ovh/story/0"
@@ -49,68 +24,143 @@
 		  on-response="handleResponse">
 		</iron-ajax>
 
+		<prism-highlighter></prism-highlighter>
+		<app-drawer id="drawer" swipe-open>
+		<paper-button raised on-tap="changeLocation">Scene</paper-button>
+		<paper-button raised on-tap="changeLocation">Data</paper-button>
+		</app-drawer>
+
+		<app-location route="{{route}}" use-hash-as-path></app-location>
+		<app-route
+			route="{{route}}"
+			pattern="/:page"
+			data="{{data}}"
+			tail="{{tail}}">
+		</app-route>
+
+		<iron-pages selected="{{route.path}}" attr-for-selected="id">
+			<section id=scene>
+				<adebray-dialog id="dialog"></adebray-dialog>
+				<canvas id=canvas width="800" height="800"></canvas>
+				<paper-textarea></paper-textarea>
+
+			</section>
+			<section id=data>
+				<marked-element markdown={{_toJSON(data)}}></marked-element>
+			</section>
+			<section></section>
+		</iron-pages>
 
 	</template>
 	<script>
-		Polymer({
-			is: 'adebray-cluedo',
+	Polymer({
+		is: 'adebray-cluedo',
 
-			_toJSON: function (e) {
-				return '```\n' + JSON.stringify(e, null, "  ") + '\n```'
-			},
+		_toJSON: function (e) {
+			return '```\n' + JSON.stringify(e, null, "  ") + '\n```'
+		},
 
-			changeLocation: function (e) {
-				let path = e.target.innerText.trim().toLowerCase()
-				location = '#' + path
-			},
+		changeLocation: function (e) {
+			let path = e.target.innerText.trim().toLowerCase()
+			location = '#' + path
+		},
 
-			handleResponse: function (e) {
-				this.set('data', e.detail.response)
+		handleResponse: function (e) {
+			this.set('data', e.detail.response)
 
-				let {renderer, scene, camera, update_stack} = Scene(this.$.canvas)
-				var spotLight1 = new THREE.SpotLight( 0xffffff, 1 );
-				spotLight1.position.set( 25, 25, 25 );
+			let {renderer, scene, camera, update_stack} = Scene(this.$.canvas)
+			var spotLight1 = new THREE.SpotLight( 0xaeaeff, 1 );
+			spotLight1.position.set( 25, 25, 25 );
+			spotLight1.castShadow = true;
+			spotLight1.shadow.mapSize.width = 1024;
+			spotLight1.shadow.mapSize.height = 1024;
+			spotLight1.shadow.camera.near = 1;
+			spotLight1.shadow.camera.far = 1000;
+			spotLight1.shadow.camera.fov = 30;
+			spotLight1.angle = 0.08
+			scene.add( spotLight1 );
 
-				spotLight1.castShadow = true;
+			update_stack.push(({clock}) => {
+				let time = clock.getElapsedTime() * 50
+				spotLight1.position.set(
+					Math.cos(time / 200) * 40,
+					50,
+					Math.sin(time / 200) * 40
+				)
+			})
 
-				spotLight1.shadow.mapSize.width = 1024;
-				spotLight1.shadow.mapSize.height = 1024;
+			scene.dialog = this.$.dialog
 
-				spotLight1.shadow.camera.near = 1;
-				spotLight1.shadow.camera.far = 1000;
-				spotLight1.shadow.camera.fov = 30;
-				spotLight1.angle = 0.08
-
-				scene.add( spotLight1 );
-
-				update_stack.push(({clock}) => {
-					let time = clock.getElapsedTime() * 50
-					spotLight1.position.set(
-						Math.cos(time / 200) * 40,
-						50,
-						Math.sin(time / 200) * 40
-					)
+			let tree = []
+			let characters = e.detail.response.data.story.characters
+			characters.forEach( (e, i) => {
+				let name = e.name
+				if (e.texture)
+					var texture = e.texture.toLowerCase()
+				let c = new Character({
+					name: name,
+					texture: `./assets/${texture}.png`
 				})
 
-				scene.dialog = this.$.dialog
+				if (i == 0) {
+					scene.mainCharacter = c
+					mainCharacter = e
+				}
 
-				let characters = e.detail.response.data.story.characters
-				characters.forEach( (e, i) => {
-					let name = e.name.toLowerCase()
-					let c = new Character({
-						name: name,
-						texture: `./assets/${name}.png`
+				if (e.relationships.length != 0) {
+					let d = document.createElement('div')
+					d.style['position'] = 'absolute'
+					d.style['width'] = '150px'
+					d.style['height'] = '80px'
+					d.style['border'] = '1px solid black'
+					d.style['background-color'] = 'white'
+					d.style['top'] = `${Math.floor(i / 8) * 120 + 120}px`
+					d.style['left'] = `${Math.floor(i % 8) * 120 + 100}px`
+					d.id = name
+					d.innerHTML = `
+					${name}<br>
+					${e.age}
+					`
+
+					tree.push(d)
+					this.$.data.appendChild(d)
+				}
+
+				c.translateX(i - characters.length / 2)
+				update_stack.push(c.update.bind(c))
+				scene.add(c)
+			})
+
+			this.async(() => jsPlumb.ready(function() {
+				tree.forEach( e => {
+					let {id} = e
+					let relationships = characters.find(_ => _.name == id).relationships
+
+					jsPlumb.draggable(e.id)
+					relationships.forEach( _ => {
+						let anchors = ['Center', 'Center']
+						let paintStyle = { strokeWidth:4, stroke:'gray' }
+
+						if (_.state == 'father' || _.state == 'mother') {
+							anchors = ['Bottom', 'Top']
+						}
+						if (_.state == 'son' || _.state == 'daughter') {
+							anchors = ['Top', 'Bottom']
+						}
+						if (_.state == 'husband' || _.state == 'wife') {
+							paintStyle = { strokeWidth:4, stroke:'green' }
+						}
+						jsPlumb.connect({
+							source: e.id,
+							target: _.character.name,
+							anchors,
+							paintStyle,
+						})
 					})
-
-					if (c.name == 'red') {
-						scene.mainCharacter = c
-					}
-
-					c.translateX(i - characters.length / 2)
-					update_stack.push(c.update.bind(c))
-					scene.add(c)
 				})
-			}
-		});
+			}), 200)
+
+		}
+	});
 	</script>
 </dom-module>
