--- a/client/index.html
+++ b/client/index.html
@@ -21,14 +21,12 @@
 		<script src=scripts/dat.gui.js></script>
 		<script src=scripts/scene.js></script>
 		<script src=scripts/character.js></script>
-
-
 	</head>
 
 	<body>
 		<adebray-cluedo></adebray-cluedo>
 		<script type="text/javascript">
-			location = '#data'
+			location = '#story'
 		</script>
 	</body>
 </html>
