more client graphql

--- a/client/elements.html
+++ b/client/elements.html
@@ -24,3 +24,4 @@
 
 <link rel=import href=elements/adebray-cluedo.html>
 <link rel=import href=elements/adebray-dialog.html>
+<link rel=import href=elements/adebray-graphql.html>
