--- a/client/index.html
+++ b/client/index.html
@@ -26,7 +26,7 @@
 	<body>
 		<adebray-cluedo></adebray-cluedo>
 		<script type="text/javascript">
-			location = '#story'
+			location = '#scene'
 		</script>
 	</body>
 </html>
