--- a/client/elements/adebray-dialog.html
+++ b/client/elements/adebray-dialog.html
@@ -42,7 +42,7 @@
 			</template>
 		</div>
 
-		<paper-input id=toto type=text value="do you like potatoes ?" on-change=onChange></paper-input>
+		<paper-input id=toto type=text value="Do you like potatoes ?" on-change=onChange></paper-input>
 		<marked-element id="markdown"></marked-element>
 
 	</paper-dialog>
