--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,7 @@
 
 		<script src="scripts/jsplumb.js "></script>
 		<script src=https://threejs.org/build/three.js></script>
-		<script src=scripts/dat.gui.js></script>
+		<script src=bower_components/dat.gui/build/dat.gui.min.js></script>
 		<script src=scripts/scene.js></script>
 		<script src=scripts/character.js></script>
 	</head>
