--- a/client/elements/adebray-dialog.html
+++ b/client/elements/adebray-dialog.html
@@ -20,7 +20,7 @@
 		id="XHR"
 		method="POST"
 		content-type="application/json"
-		url="http://api.adebray.ovh/recast"
+		url="__api_url__/recast"
 		handle-as="json"
 		on-response="handleResponse">
 	</iron-ajax>
