--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,7 @@
 
 		<script src=https://threejs.org/build/three.js></script>
 		<script src="scripts/OBJLoader.js"></script>
+		<script src="scripts/OBJLoader2.js"></script>
 
 		<script src=bower_components/dat.gui/build/dat.gui.min.js></script>
 
