--- a/client/elements/adebray-cluedo.html
+++ b/client/elements/adebray-cluedo.html
@@ -118,6 +118,10 @@
 			this.set('logo', e.detail.response)
 		},
 
+		handleResponse: function (e) {
+			this.set('data', e.detail.response)
+		},
+
 		handleTS: function (e) {
 			console.log(e)
 			this.set('ts', e.detail.response)
@@ -125,42 +129,7 @@
 
 			let {renderer, scene, camera, update_stack} = Scene(this.$.canvas)
 
-			var loader = new THREE.OBJLoader();
 
-			// load a resource
-			loader.load(
-				// resource URL
-				'models/seahorse.obj',
-				// Function when resource is loaded
-				function ( object ) {
-					// console.log(object)
-					// object.position.x = 0
-					// object.position.y = -25
-					object.position.z = 30
-
-					object.scale.x = 0.1
-					object.scale.y = 0.1
-					object.scale.z = 0.1
-					let material = new THREE.MeshPhongMaterial( {
-						color: 0xa5a5a5,
-						// map: texture,
-						// wireframe: true
-					} )
-					var gui = new dat.GUI();
-					gui.add(object.position, 'x', -1000, 1000);
-					gui.add(object.position, 'y', -1000, 1000);
-					gui.add(object.position, 'z', -1000, 1000);
-					object.traverse( function ( child ) {
-						if ( child instanceof THREE.Mesh ) {
-							child.material = material;
-						}
-					} );
-
-					console.log(object)
-					scene.add( object );
-					// camera.lookAt(object.position)
-				}
-			);
 			var spotLight1 = new THREE.SpotLight( 0xaeaeff, 1 );
 			spotLight1.position.set( 25, 25, 25 );
 			spotLight1.castShadow = true;
@@ -169,8 +138,11 @@
 			spotLight1.shadow.camera.near = 1;
 			spotLight1.shadow.camera.far = 1000;
 			spotLight1.shadow.camera.fov = 30;
-			spotLight1.angle = 0.08
+			spotLight1.angle = 0.5
 			scene.add( spotLight1 );
+
+			// var spotLightHelper = new THREE.SpotLightHelper( spotLight1 );
+			// scene.add( spotLightHelper );
 
 			update_stack.push(({clock}) => {
 				let time = clock.getElapsedTime() * 50
@@ -183,9 +155,337 @@
 
 			scene.dialog = this.$.dialog
 
-			var light = new THREE.AmbientLight( 0x404040 );
+			var light = new THREE.AmbientLight( 0xa0a0a0, 5 );
+			// light.position = new THREE.Vector3(0, 100, 0);
 			scene.add( light );
+
+
+			// let geometry = new THREE.BoxGeometry( 1, 1, 1 )
+			let pieces = [
+				{ w: 2 * 10, h: 2 * 10, d: 2 * 10 },
+				{ w: 2 * 10, h: 2 * 10, d: 2 * 10 },
+				{ w: 2 * 10, h: 2 * 10, d: 2 * 10 },
+				{ w: 2 * 10, h: 2 * 10, d: 2 * 10 },
+				{ w: 2 * 10, h: 2 * 10, d: 2 * 10 },
+
+				{ w: 5 * 10, h: 1 * 10, d: 5 * 10 },
+				{ w: 5 * 10, h: 5 * 10, d: 1 * 10 },
+				{ w: 1 * 10, h: 5 * 10, d: 5 * 10 },
+				{ w: 3 * 10, h: 2 * 10, d: 3 * 10 },
+				{ w: 3 * 10, h: 3 * 10, d: 2 * 10 },
+				{ w: 2 * 10, h: 3 * 10, d: 3 * 10 },
+
+				{ w: 2 * 10, h: 2 * 10, d: 2 * 10 },
+				{ w: 2 * 10, h: 2 * 10, d: 2 * 10 },
+				{ w: 2 * 10, h: 2 * 10, d: 2 * 10 },
+				{ w: 2 * 10, h: 2 * 10, d: 2 * 10 },
+				{ w: 2 * 10, h: 2 * 10, d: 2 * 10 },
+
+				{ w: 5 * 10, h: 1 * 10, d: 5 * 10 },
+				{ w: 5 * 10, h: 5 * 10, d: 1 * 10 },
+				{ w: 1 * 10, h: 5 * 10, d: 5 * 10 },
+				{ w: 3 * 10, h: 2 * 10, d: 3 * 10 },
+				{ w: 3 * 10, h: 3 * 10, d: 2 * 10 },
+				{ w: 2 * 10, h: 3 * 10, d: 3 * 10 },
+				// [
+				// 	{
+				// 		x: 1,
+				// 		w: 3, h: 1, d: 1
+				// 	},
+				// 	{
+				// 		w: 1, h: 1, d: 1
+				// 	},
+				// 	{
+				// 		y: 1,
+				// 		w: 1, h: 1, d: 1
+				// 	},
+				// 	{
+				// 		z: 1,
+				// 		w: 1, h: 1, d: 1
+				// 	},
+				// 	{
+				// 		z: 1,
+				// 		w: 1, h: 1, d: 3
+				// 	},
+				// 	{
+				// 		y:2, z: 3,
+				// 		w: 1, h: 3, d: 3
+				// 	},
+				// 	{
+				// 		y: 3,
+				// 		w: 5, h: 1, d: 3
+				// 	},
+				// ]
+			]
+			let s = (x, y, z) => x ** 2 + y ** 2 + z ** 2
+			let f = p => {
+				if (!(p instanceof Array)) {
+					let geometry = new THREE.BoxGeometry(p.w, p.h, p.d)
+					geometry.translate(p.w / 2, p.h / 2, p.d / 2)
+					let material = new THREE.MeshPhongMaterial( {
+						color: new THREE.Color(p.w, p.h, p.d),
+						// wireframe: true
+					} )
+					let o = new THREE.Mesh(geometry, material)
+					o.position.x = p.x || 0
+					o.position.y = p.y || 0
+					o.position.z = p.z || 0
+
+					let data = []
+					for (var x = 0; x < p.w; x++) {
+						data[x] = []
+						for (var y = 0; y < p.h; y++) {
+							data[x][y] = []
+							for (var z = 0; z < p.d; z++) {
+								data[x][y][z] = true
+							}
+						}
+					}
+
+					return [data, o]
+				}
+				else {
+					let g = new THREE.Group()
+					p.map(f).forEach(e => g.add(e))
+					return g
+				}
+			}
+			let data = piece => (_x, _y, _z) => {
+				return piece.reduce( (p, e, x) => {
+					return p + e.reduce((p, e, y) => {
+						return p + e.reduce( (p, e, z) => p + (e ? s(x + _x, y + _y, z + _z) : 0), 0)
+					}, 0)
+				}, 0)
+			}
+			let map_size = 20
+			let map = []
+			let empty = map
+			for (var x = 0; x < 20; x++) {
+				map[x] = []
+				for (var y = 0; y < 20; y++) {
+					map[x][y] = []
+					for (var z = 0; z < 20; z++) {
+						map[x][y][z] = false
+					}
+				}
+			}
+			let write = (map, [piece, object]) => (_x, _y, _z) => {
+				piece.forEach((e, x) => {
+					e.forEach((e, y) => {
+						e.forEach((e, z) => {
+							// console.log(e)
+							if (!map[x + _x][y + _y][z + _z])
+								map[x + _x][y + _y][z + _z] = (e ? piece : false)
+							// scene.add(object)
+						})
+					})
+				})
+			}
+			let remove = (map, [piece, object]) => (_x, _y, _z) => {
+				piece.forEach((e, x) => {
+					e.forEach((e, y) => {
+						e.forEach((e, z) => {
+							if (map[x + _x][y + _y][z + _z] == piece)
+								map[x + _x][y + _y][z + _z] = false
+							// scene.remove(object)
+						})
+					})
+				})
+			}
+			let draw = (map) => {
+				for( var i = scene.children.length - 1; i >= 0; i--) {
+					obj = scene.children[i]
+					if (obj instanceof THREE.Mesh)
+						scene.remove(obj)
+				}
+				map.forEach( (e,x) => {
+					e.forEach( (e,y) => {
+						e.forEach( (e,z) => {
+							if (e) {
+								let geometry = new THREE.BoxGeometry( 1, 1, 1 )
+								geometry.translate(0.5, 0.5, 0.5)
+								let material = new THREE.MeshPhongMaterial( {
+									color: new THREE.Color(x / 127, y / 127, z / 127),
+									// map: texture,
+									// wireframe: true
+								} )
+								let cube = new THREE.Mesh( geometry, material )
+								cube.position.set(x, y, z)
+								cube.castShadow = true
+								cube.receiveShadow = true
+								scene.add( cube )
+							}
+						})
+					})
+				})
+			}
+			let _process = pieces.map( f ).map( (e,i) => {
+				return () => {
+					let x = y = z = 0
+					let seuil = 0
+					return () => new Promise( (res, rej) => {
+						console.log('new Promise', x, y, z)
+						let _piece = data(e[0])(x, y, z)
+						let _map = data(map)(0, 0, 0)
+
+						write(map, e)(x, y, z)
+
+						// console.log(data(map)(0, 0, 0), _piece + _map)
+						// console.log(data(map)(0, 0, 0) == _piece + _map)
+
+						// setTimeout(() => {
+							if (data(map)(0, 0, 0) == _piece + _map) {
+								res()
+							}
+							else {
+								remove(map, e)(x, y, z)
+								// draw(map)
+
+								if (x < seuil)
+									x += 1
+								else {
+									x = 0
+									if (y < seuil)
+										y += 1
+									else {
+										y = 0
+										if (z < seuil)
+											z += 1
+										else {
+											z = 0
+											seuil += 1
+										}
+									}
+								}
+
+								rej()
+							}
+						// }, 200)
+					})
+				}
+			})
+			__process = _process.map( f => f() )
+			let __ = (i) => {
+				if (__process[i]) {
+					let p = __process[i]().then(() => {
+						__process[i + 1] = _process[i + 1]()
+						__(i + 1)
+					}).catch(() => __(i))
+				} else {
+					console.log('DONE')
+				}
+			}
+
+			// draw(map)
+			__(0)
 			//
+
+			//
+			// for (let i = 0; i < 10; i += 1) {
+			// 	for (let j = 0; j < 10; j += 1) {
+			// 		let cube = new THREE.Mesh( geometry, material )
+			// 		cube.position.set( i, 0, j)
+			// 		cube.castShadow = true
+			// 		cube.receiveShadow = true
+			// 		scene.add( cube )
+			// 	}
+			// }
+			//
+			// scene.children.forEach( child => scene.remove(child))
+			// console.log(scene)
+
+			// pieces.forEach( p => {
+			// 	for (var x = 0; x < p.w; x++) {
+			// 		for (var y = 0; y < p.h; y++) {
+			// 			for (var z = 0; z < p.d; z++) {
+			// 				let material = new THREE.MeshPhongMaterial( {
+			// 					color: new THREE.Color(x, y, z),
+			// 					// wireframe: true
+			// 				} )
+			// 				let cube = new THREE.Mesh( geometry, material )
+			// 				cube.position.set( x - 0.5, y + 1, z - 0.5)
+			// 				cube.castShadow = true
+			// 				cube.receiveShadow = true
+			// 				scene.add( cube )
+			// 			}
+			// 		}
+			// 	}
+			// })
+
+			// var loader = new THREE.OBJLoader();
+
+			// load a resource
+			// console.log(loader.parse('v 0.123 0.234 0.345'))
+			// scene.add( loader.parse('v 0.123 0.234 0.345') )
+
+// 			let s = `
+// # OBJ file created by ply_to_obj.c
+// #
+// g Object001
+//
+// v  0  0  0
+// v  1  0  0
+// v  1  1  0
+// v  0  1  0
+// v  0.5  0.5  1.6
+//
+// f  5  2  3
+// f  4  5  3
+// f  6  3  2
+// f  5  6  2
+// f  4  6  5
+// f  6  4  3
+// `
+			// let o = loader.parseText(s)
+			//
+			// loader.load('models/seahorse.obj', function (o) {
+			// 	let material = new THREE.MeshPhongMaterial( {
+			// 		color: 0xf50000,
+			// 		// transparent: true,
+			// 		// wireframe: true
+			// 	} )
+			//
+			// 	o.position = new THREE.Vector3(0, 0, 0)
+			// 	// o.traverse( child => {
+			// 	// 	if ( child instanceof THREE.Mesh ) {
+			// 	// 		child.material = material
+			// 	// 		child.castShadow = true
+			// 	// 		child.receiveShadow = true
+			// 	// 	}
+			// 	// })
+			//
+			// 	console.log(o)
+			// 	scene.add( o )
+			// 	var gui = new dat.GUI();
+			// 	gui.add(o.position, 'x', -1000, 1000);
+			// 	gui.add(o.position, 'y', -1000, 1000);
+			// 	gui.add(o.position, 'z', -1000, 1000);
+			// })
+			//
+			// let o = loader.parse(s)
+			// let material = new THREE.MeshPhongMaterial( {
+			// 	color: 0xf50000,
+			// 	// transparent: true,
+			// 	// wireframe: true
+			// } )
+
+			// o.position = new THREE.Vector3(0, 0, 0)
+			// o.traverse( child => {
+			// 	if ( child instanceof THREE.Mesh ) {
+			// 		child.material = material
+			// 		child.castShadow = true
+			// 		child.receiveShadow = true
+			// 	}
+			// })
+
+			// console.log(o)
+			// scene.add( o )
+			// var gui = new dat.GUI();
+			// gui.add(o.position, 'x', -1000, 1000);
+			// gui.add(o.position, 'y', -1000, 1000);
+			// gui.add(o.position, 'z', -1000, 1000);
+			//
+			// //
 			//
 			// let characters = Object.keys(this.ts._personae).map( k => Object.assign(this.ts._personae[k], {
 			// 	texture: 'red_headphones',
@@ -237,40 +537,6 @@
 
 
 		},
-
-		handleResponse: function (e) {
-			this.set('data', e.detail.response)
-
-			// this.async(() => jsPlumb.ready(function() {
-			// 	tree.forEach( e => {
-			// 		let {id} = e
-			// 		let relationships = characters.find(_ => _.name == id).relationships
-			//
-			// 		jsPlumb.draggable(e.id)
-			// 		relationships.forEach( _ => {
-			// 			let anchors = ['Center', 'Center']
-			// 			let paintStyle = { strokeWidth:4, stroke:'gray' }
-			//
-			// 			if (_.state == 'father' || _.state == 'mother') {
-			// 				anchors = ['Bottom', 'Top']
-			// 			}
-			// 			if (_.state == 'son' || _.state == 'daughter') {
-			// 				anchors = ['Top', 'Bottom']
-			// 			}
-			// 			if (_.state == 'husband' || _.state == 'wife') {
-			// 				paintStyle = { strokeWidth:4, stroke:'green' }
-			// 			}
-			// 			jsPlumb.connect({
-			// 				source: e.id,
-			// 				target: _.character.name,
-			// 				anchors,
-			// 				paintStyle,
-			// 			})
-			// 		})
-			// 	})
-			// }), 200)
-
-		}
 	});
 	</script>
 </dom-module>
